final-project/css/main.css
/* .main_wrapper{
    width: 1300px;
    margin: auto;
}
.main_wrapper2{
    width: 1300px;
    margin: auto;
}
nav{
    background-color: rgb(89, 81, 81);
}
.logo, .navigation, .search{
    background-color: aqua;
    width: 1100px;
    margin: auto;
}
.about_us{
    background-color: bisque;
}
.about_wrapper{
    background-color: aqua;
    width: 1100px;
    margin: auto;
}
.vision_wrapper_bleeding{
    background-color: gray;
}
.vision{
    background-color: aqua;
    width: 1100px;
    margin: auto;
}
footer{
    background-color: rgb(183, 176, 176);
}
.footer_content{
    background-color: aqua;
    width: 1100px;
    margin: auto;
} */

